<resources>
    <string name="app_name">Travel App</string>

    <string name="url_servlet_admin">http://192.168.43.47:8080/serviCasas/admin/adminController</string>

    <string name="titulo">Consulte su Viaje</string>
    <string name="titulo2">RESULTADO</string>
    <string name="origen">Origen:</string>
    <string name="destino">Destino:</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="viajecorto">Viaje mas corto:</string>
    <string name="viajeeconomico">Viaje mas economico:</string>



</resources>
